manifest/aks.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myresumewebsite-deployment
  labels:
    app: myresumewebsite
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myresumewebsite
  template:
    metadata:
      labels:
        app: myresumewebsite
    spec:
      containers:
      - name: myresumewebsite
        image: acrwsrcirculationdev.azurecr.io/rupeshkushmalu/myresumewebsite:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myresumewebsite-service
spec:
  selector:
    app: myresumewebsite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
